RESOLVED FIXED282398
[Navigation] Fix cross-window replace navigations
https://bugs.webkit.org/show_bug.cgi?id=282398
Summary [Navigation] Fix cross-window replace navigations
Patrick Griffis
Reported 2024-10-31 11:04:25 PDT
Fixes: * LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigate-event/cross-origin-traversal-redirect-expected.txt: * LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigation-activation/activation-replace-expected.txt: * LayoutTests/platform/gtk/imported/w3c/web-platform-tests/navigation-timing/nav2_test_redirect_xserver-expected.txt: * LayoutTests/platform/gtk/imported/w3c/web-platform-tests/navigation-timing/test_timing_xserver_redirect-expected.txt:
Attachments
Patrick Griffis
Comment 1 2024-10-31 11:04:57 PDT
EWS
Comment 2 2024-11-04 13:14:41 PST
Committed 286115@main (e2da0c499986): <https://commits.webkit.org/286115@main> Reviewed commits have been landed. Closing PR #36004 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-11-04 13:15:18 PST
Note You need to log in before you can comment on or make changes to this bug.