[Navigation] Fix cross-window replace navigations https://bugs.webkit.org/show_bug.cgi?id=282398

Reviewed by Alex Christensen.

* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigate-event/cross-origin-traversal-redirect-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigation-activation/activation-replace-expected.txt:
* LayoutTests/platform/gtk/imported/w3c/web-platform-tests/navigation-timing/nav2_test_redirect_xserver-expected.txt:
* LayoutTests/platform/gtk/imported/w3c/web-platform-tests/navigation-timing/test_timing_xserver_redirect-expected.txt:
* Source/WebCore/page/Navigation.cpp:
(WebCore::Navigation::initializeForNewWindow):

Canonical link: https://commits.webkit.org/286115@main